--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/encender" />
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
 
